--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <main class="container-fluid flex-grow-1">
       <h2 id="bushelCount">Bushels Picked:</h2>
       <img onclick="pick()" class="image-size" src="high-tunnel-pic.jpg" />
+      <div>Winter</div>
+      <div>Spring</div>
+      <div>Summer</div>
+      <div>Fall</div>
     </main>
     <footer class="container-fluid"></footer>
 
