--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <h1>Peach Farm</h1>
     </header>
     <main class="container-fluid flex-grow-1">
-      <h2 id="bushelCount">Bushels Picked:</h2>
+      <h2 id="bushel-count">Bushels Picked:</h2>
+      <h2 id="days-left">Days Left:</h2>
       <img onclick="pick()" class="image-size" src="high-tunnel-pic.jpg" />
       <div>Winter</div>
       <div>Spring</div>
