--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
         <div class="col-4"></div>
         <div class="col-4"></div>
       </div>
+
+      <div id="farmWorkers"></div>
     </main>
     <footer class="container-fluid"></footer>
 
