--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
       </div>
 
       <div id="farmWorkers"></div>
-    </main>
-    <footer class="container-fluid"></footer>
+      <div id="standWorkers"></div>
+      <div id="pruningItems"></div>
+      <div id="thinningItems"></footer>
 
     <!--#region  Scripts-->
     <script src="app.js"></script>
