--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
       <div id="farmWorkers"></div>
       <div id="standWorkers"></div>
-      <div id="pruningItems"></div>
-      <div id="thinningItems"></footer>
+      <div id="farmEquipment"></div>
+      <div id="farmSecurity"></footer>
 
     <!--#region  Scripts-->
     <script src="app.js"></script>
