--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div id="upgradeList" class="col-md-4">
+        <div class="col-md-4"><div id="farmWorkersHired"></div>
 
         </div>
          <div class="col-6">
