added more features

--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
             Begin Harvest
           </button>
         </div><div class="col-6 text center">
-          <button type="button" class="btn start-buttons rounded" onclick="pause()">
-            Pause
+          <button type="button" class="btn start-buttons rounded" onclick="restart()">
+            Restart
           </button>
         </div>
         
       </div>
       <div class="row hg-main mt-1">
         <div class="col-4"> 
-          <p id="bushel-count" class="my-0">Bushels Picked:</p>
-          <p id="bushels-sold"class="my-0" >Bushels Sold:</p>
-          <p id="bushels-in-storage" class="my-0">Bushels in the Cooler:</p>
+          <p id="bushel-count" class="my-0">Peaches Picked:</p>
+          <p id="bushels-sold"class="my-0" >Peaches Sold:</p>
+          <p id="bushels-in-storage" class="my-0">Peaches in Cooler:</p>
         </div>
         <div class="col-4"><p id="days-left">Days Left:</p></div>
         <div class="col-4">
