replaced item list with dropdown menu

--- a/index.html
+++ b/index.html
@@ -77,7 +77,19 @@
         <h2 >Add to Your Farm</h2></div>
         <div class="col-6">           
            <h4>Hirelings and Help</h4>          
-          <div id="farmWorkers"></div>
+          <div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                Dropdown button
+              </button>
+              <div class="dropdown-menu" id="farmWorkers" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+              </div>
+            </div>
+          </div>
           <div id="standWorkers"></div>
           <div id="farmSecurity"></div>
       </div>
@@ -111,3 +123,5 @@
     <!-- #endregion -->
   </body>
 </html>
+
+
