--- a/index.html
+++ b/index.html
@@ -76,17 +76,14 @@
         <div class="col-12 shadow">
         <h2 >Add to Your Farm</h2></div>
         <div class="col-6">           
-           <h4>Hirelings and Help</h4>          
+           <h4>Hire:</h4>          
           <div>
             <div class="dropdown">
               <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
-                Dropdown button
+                Farm Workers
               </button>
-              <div class="dropdown-menu" id="farmWorkers" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><table id="farmWorkers"></table>                
               </div>
             </div>
           </div>
