--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
       </div>
       <div class="row text-center my-3">
-        <div class="col-md-4 d-flex justify-content-center">
+        <div class="col-md-4 d-flex ">
           <div type ="button" class="card shadow border-for-card p-1 hg-snow" onclick="pick()" style="width: 18rem;">
             <img class="card-img-top shadow" src="peaches-on-tree.jpg" alt="Card image cap">
             <div class="card-body">
@@ -58,12 +58,11 @@
             </div>
           </div>          
          </div>
-        <div class="col-md-4 d-flex justify-content-center">
+        <div class="col-md-4 d-flex ">
           <div type="button" class="card shadow border-for-card p-1 hg-snow" onclick="sell()" style="width: 18rem;">
             <img class="card-img-top shadow" src="peaches-for-sale.jpg" alt="Card image cap">
             <div class="card-body">
-              <p class="card-text rounded hg-snow shadow">Meanwhile at the Peach Stand...<br/>(Hint: Hire folks for your stand, so you can concentrate on the harvest)
-              </p>              
+              <p class="card-text rounded hg-snow shadow">Meanwhile at the Peach Stand...</p>              
             </div>
           </div>
         </div>
