--- a/index.html
+++ b/index.html
@@ -170,25 +170,25 @@
         </div>
       </div>
       <div class="row hg-main-darker shadow">
-        <div class="col-3">
+        <div class="col-md-3">
           <table
             id="farmWorkersHired"
             class="hg-sidekick-darker font-color-main-darker"
           ></table>
         </div>
-        <div class="col-3">
+        <div class="col-md-3">
           <table
             id="standWorkersHired"
             class="hg-sidekick-darker font-color-main-darker"
           ></table>
         </div>
-        <div class="col-3">
+        <div class="col-md-3">
           <table
             id="farmEquipmentBought"
             class="hg-sidekick-darker font-color-main-darker"
           ></table>
         </div>
-        <div class="col-3">
+        <div class="col-md-3">
           <table
             id="standInfrastructureBought"
             class="hg-sidekick-darker font-color-main-darker"
