--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="row text-center my-3">
-        <div class="col-md-4 d-flex">
+        <div class="col-md-4">
           <div
             type="button"
             class="card shadow border-for-card p-1 hg-snow"
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex">
+        <div class="col-md-4">
           <div
             type="button"
             class="card shadow border-for-card p-1 hg-snow"
