--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container-fluid hg-main">
       <h1>🍑 Peach Farm</h1>
     </header>
-    <main class="container-fluid flex-grow-1">
+    <main class="container-fluid">
       <div class="row text-center py-2 border-y-light hg-sidekick-darker">
         <div id="harvest" class="col-6 text center">
           <button
