--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="container-fluid hg-main">
       <h1>🍑 Peach Farm</h1>
     </header>
-    <main class="container-fluid">
+    <main class="container-fluid flex-grow-1">
       <div class="row text-center py-2 border-y-light hg-sidekick-darker">
         <div id="harvest" class="col-6 text center">
           <button
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="row text-center my-3">
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex justify-content-center">
           <div
             type="button"
             class="card shadow border-for-card p-1 hg-snow"
@@ -76,7 +76,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 d-flex justify-content-center">
           <div
             type="button"
             class="card shadow border-for-card p-1 hg-snow"
