--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         </div>
       </div>
       <div class="row text-center my-3">
-        <div class="col-md-4 d-flex justify-content-center">
+        <div
+          class="col-12 col-md-4 d-flex justify-content-center justify-content-md-start mb-2"
+        >
           <div
             type="button"
             class="card shadow border-for-card p-1 hg-snow"
@@ -76,7 +78,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex justify-content-center">
+        <div
+          class="col-12 col-md-4 d-flex justify-content-center justify-content-md-start mb-2"
+        >
           <div
             type="button"
             class="card shadow border-for-card p-1 hg-snow"
@@ -95,7 +99,9 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 text-left">
+        <div
+          class="col-md-4 text-left justify-content-center justify-content-md-left mb-2"
+        >
           <h5><u>Add to Your Farm</u></h5>
           <h5>Hire:</h5>
           <div>
