--- a/index.html
+++ b/index.html
@@ -175,29 +175,29 @@
           </div>
         </div>
       </div>
-      <div class="row hg-main-darker shadow">
+      <div class="row hg-main-darker shadow border-y-light">
         <div class="col-md-3">
           <table
             id="farmWorkersHired"
-            class="hg-sidekick-darker font-color-main-darker"
+            class="hg-sidekick-darker font-color-main-darker m-1"
           ></table>
         </div>
         <div class="col-md-3">
           <table
             id="standWorkersHired"
-            class="hg-sidekick-darker font-color-main-darker"
+            class="hg-sidekick-darker font-color-main-darker m-1"
           ></table>
         </div>
         <div class="col-md-3">
           <table
             id="farmEquipmentBought"
-            class="hg-sidekick-darker font-color-main-darker"
+            class="hg-sidekick-darker font-color-main-darker m-1"
           ></table>
         </div>
         <div class="col-md-3">
           <table
             id="standInfrastructureBought"
-            class="hg-sidekick-darker font-color-main-darker"
+            class="hg-sidekick-darker font-color-main-darker m-1"
           ></table>
         </div>
       </div>
